--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-expand">
+<nav class="navbar  navbar-expand">
   <div class="container">
     <a class="navbar-brand text-reset fs-4"
       ><i class="fa-solid fa-note-sticky"></i> Notes</a
