add show passowrd

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,6 +9,7 @@
         data-bs-toggle="modal"
         data-bs-target="#addNoteModal"
         (click)="changbutton()"
+        tabindex="-1"
       >
         Add Note
       </button>
