--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -6,19 +6,26 @@
         <div class="col-md-6">
           <div class="form-data">
             <label for="first_name" class="form-label">First Name</label>
-            <input
+            <input autocomplete="off"
               formControlName="first_name"
               type="text"
               id="first_name"
-              class="form-control"
+              password
               placeholder=" "
+              [ngClass]="{
+                'form-control': true,
+                'is-invalid':
+                  signUpForm.get('first_name')?.invalid &&
+                  input000.value.length > 0,
+                'is-valid': signUpForm.get('first_name')?.valid
+              }"
+              #input000
             />
           </div>
           <div
             class="msg-reg"
             *ngIf="
-              signUpForm.get('first_name')?.errors &&
-              signUpForm.get('first_name')?.touched
+              signUpForm.get('first_name')?.invalid && input000.value.length > 0
             "
           >
             <p
@@ -44,19 +51,25 @@
         <div class="col-md-6">
           <div class="form-data">
             <label for="last_name" class="form-label">Last Name</label>
-            <input
+            <input autocomplete="off"
               formControlName="last_name"
               type="text"
               id="last_name"
-              class="form-control"
+              [ngClass]="{
+                'form-control': true,
+                'is-invalid':
+                  signUpForm.get('last_name')?.invalid &&
+                  input00.value.length > 0,
+                'is-valid': signUpForm.get('last_name')?.valid
+              }"
               placeholder=" "
+              #input00
             />
           </div>
           <div
             class="msg-reg"
             *ngIf="
-              signUpForm.get('last_name')?.errors &&
-              signUpForm.get('last_name')?.touched
+              signUpForm.get('last_name')?.invalid && input00.value.length > 0
             "
           >
             <p
@@ -82,20 +95,24 @@
         <div class="col-12">
           <div class="form-data">
             <label for="email" class="form-label">Email</label>
-            <input
+            <input autocomplete="off"
               formControlName="email"
               type="email"
               id="email"
-              class="form-control"
+              [ngClass]="{
+                'form-control': true,
+                'is-invalid':
+                  signUpForm.get('email')?.invalid &&
+                  input0.value.length > 0,
+                'is-valid': signUpForm.get('email')?.valid
+              }"
               placeholder=" "
+              #input0
             />
           </div>
           <div
             class="msg-reg"
-            *ngIf="
-              signUpForm.get('email')?.errors &&
-              signUpForm.get('email')?.touched
-            "
+            *ngIf="signUpForm.get('email')?.invalid && input0.value.length > 0"
           >
             <p
               class="alert alert-danger p-0"
@@ -114,19 +131,24 @@
         <div class="col-12">
           <div class="form-data">
             <label for="age" class="form-label">Age</label>
-            <input
+            <input autocomplete="off"
+              #input
               formControlName="age"
               type="number"
               id="age"
-              class="form-control"
+              [ngClass]="{
+                'form-control': true,
+                'is-invalid':
+                  signUpForm.get('age')?.invalid &&
+                  input.value.length > 0,
+                'is-valid': signUpForm.get('age')?.valid
+              }"
               placeholder=" "
             />
           </div>
           <div
             class="msg-reg"
-            *ngIf="
-              signUpForm.get('age')?.errors && signUpForm.get('age')?.touched
-            "
+            *ngIf="signUpForm.get('age')?.invalid && input.value.length > 0"
           >
             <p
               class="alert alert-danger p-0"
@@ -151,22 +173,44 @@
         <div class="col-12">
           <div class="form-data">
             <label for="password" class="form-label">Password</label>
-            <input
-              formControlName="password"
-              type="password"
-              id="password"
-              class="form-control"
-              placeholder=" "
-            />
+            <div class="password-filed position-relative">
+              <input
+                formControlName="password"
+                [type]="type"
+                id="password"
+                #input2
+                autocomplete="off"
+                [ngClass]="{
+                  'form-control ps-4 ': true,
+                  'is-invalid':
+                    signUpForm.get('password')?.invalid &&
+                    input2.value.length > 0,
+                  'is-valid': signUpForm.get('password')?.valid
+                }"
+                placeholder=" "
+              />
+              <i
+                *ngIf="!isShow"
+                (click)='show()'
+                tabindex="-1"
+                class="btn-show fa-solid fa-eye fa-sm text-secondary position-absolute ms-1 start-0 top-50 translate-middle-y"
+              ></i>
+              <i
+                *ngIf="isShow"
+                (click)='hidde()'
+                tabindex="-1"
+                class="btn-hide fa-solid fa-eye-slash fa-sm text-secondary position-absolute ms-1 start-0 top-50 translate-middle-y"
+              ></i>
+            </div>
           </div>
           <div
             class="msg-reg"
             *ngIf="
-              signUpForm.get('password')?.errors &&
-              signUpForm.get('password')?.touched
+              signUpForm.get('password')?.invalid && input2.value.length > 0
             "
           >
             <ul class="alert alert-danger">
+              <li>Password Like This: Mohamed11@</li>
               <li>Minimum eight and maximum 10 characters</li>
               <li>at least one uppercase letter</li>
               <li>one lowercase letter</li>
