--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<section id="signIn" class="sign-in position-relative">
+<section id="signIn" class="sign-in ">
   <div class="w-75 position-absolute top-50 start-50 translate-middle">
     <form action="" [formGroup]="signInForm" (ngSubmit)="subSignIn(signInForm)">
       <p class="alert alert-danger" *ngIf="msgError">{{ msgError }}</p>
