--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<section id="signUp" class="sign-up position-relative">
+<section id="signUp" class="sign-up">
   <div class="w-75 position-absolute top-50 start-50 translate-middle">
     <form action="" [formGroup]="signUpForm" (ngSubmit)="subSignUp(signUpForm)">
       <p class="alert alert-danger" *ngIf="msgError">{{ msgError }}</p>
