--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<main
+  [@rotateFlipToLeft]="getState(o)"
+  [@rotateFlipToRight]="getState(o)"
+  [@rotateCubeToBottom]="getState(o)"
+  [@rotateRoomToLeft]="getState(o)"
+  class="router-wrapper"
+>
+  <router-outlet #o="outlet"></router-outlet>
+</main>
